--- a/backend/Service/Service.csproj
+++ b/backend/Service/Service.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.ResourceManager.Compute" Version="1.0.0-preview.2" />
+    <PackageReference Include="Cronos" Version="0.7.0" />
     <PackageReference Include="Hangfire.Core" Version="1.7.20" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
