--- a/backend/Service/Service.csproj
+++ b/backend/Service/Service.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Hangfire.Core" Version="1.7.20" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Nager.Date" Version="1.28.2" />
     <PackageReference Include="Unleash.Client" Version="1.6.1" />
   </ItemGroup>
 
