--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,8 +1,19 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+# ide
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+
 # dependencies
+node_modules/
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
 .pnp.*
-/node_modules
 
 # testing
 /coverage
