--- a/Host/ClientApp/package.json
+++ b/Host/ClientApp/package.json
@@ -10,12 +10,15 @@
     "bootstrap": "^4.6.0",
     "http-proxy-middleware": "^1.0.6",
     "oidc-client": "^1.11.5",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-component-countdown-timer": "^0.1.8",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "reactstrap": "^8.9.0"
+    "reactstrap": "^8.9.0",
+    "sass": "^1.45.0"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
