--- a/Service/Service.csproj
+++ b/Service/Service.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Cronos" Version="0.7.1" />
     <PackageReference Include="Hangfire.Core" Version="1.7.27" />
     <PackageReference Include="Nager.Date" Version="1.30.0" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="TimeZoneConverter" Version="3.5.0" />
     <PackageReference Include="Unleash.Client" Version="2.0.0" />
   </ItemGroup>
